# 2026_SNUIPS_AI_Workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
Hands-on-3/: .gitignore  SETUP.md  pyproject.toml
Hands-on-3/notebooks/: 1_overview.ipynb  2.5_manuscript_preparation.ipynb  2_crawlers_and_selector.ipynb  3_paper_review_agent.ipynb  4_review_comparison.ipynb
Hands_on_1/: README.md
